Update examples to latest versions